--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+      mavenCentral()
+    }
+  dependencies {
+      classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.5.3"
+  }
+}
+
+apply plugin: 'io.codearte.nexus-staging'
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'signing'
@@ -80,4 +90,9 @@ uploadArchives {
       }
     }
   }
+}
+
+nexusStaging {
+    username = ossrhUsername
+    password = ossrhPassword
 }
