Add release property

--- a/build.gradle
+++ b/build.gradle
@@ -48,51 +48,53 @@ signing {
     sign configurations.archives
 }
 
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+if (project.hasProperty('release')) {
+  uploadArchives {
+    repositories {
+      mavenDeployer {
+        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
-
-      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
-      }
-
-      pom.project {
-        name 'gcloud-logging-slf4j-logback'
-        description 'gcloud-logging json log appender for sl4j + logback'
-        packaging 'jar'
-        url 'https://github.com/ankurcha/gcloud-logging-slf4j-logback'
-
-        scm {
-          connection 'scm:git@github.com:ankurcha/gcloud-logging-slf4j-logback.git'
-          developerConnection 'scm:git@github.com:ankurcha/gcloud-logging-slf4j-logback.git'
-          url 'scm:git@github.com:ankurcha/gcloud-logging-slf4j-logback.git'
+        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+          authentication(userName: ossrhUsername, password: ossrhPassword)
         }
 
-        licenses {
-          license {
-            name 'The Apache License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+          authentication(userName: ossrhUsername, password: ossrhPassword)
+        }
+
+        pom.project {
+          name 'gcloud-logging-slf4j-logback'
+          description 'gcloud-logging json log appender for sl4j + logback'
+          packaging 'jar'
+          url 'https://github.com/ankurcha/gcloud-logging-slf4j-logback'
+
+          scm {
+            connection 'scm:git@github.com:ankurcha/gcloud-logging-slf4j-logback.git'
+            developerConnection 'scm:git@github.com:ankurcha/gcloud-logging-slf4j-logback.git'
+            url 'scm:git@github.com:ankurcha/gcloud-logging-slf4j-logback.git'
           }
-        }
 
-        developers {
-          developer {
-            id 'ankurcha'
-            name 'Ankur Chauhan'
-            email 'ankur@malloc64.com'
+          licenses {
+            license {
+              name 'The Apache License, Version 2.0'
+              url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+            }
+          }
+
+          developers {
+            developer {
+              id 'ankurcha'
+              name 'Ankur Chauhan'
+              email 'ankur@malloc64.com'
+            }
           }
         }
       }
     }
   }
-}
 
-nexusStaging {
-    username = ossrhUsername
-    password = ossrhPassword
+  nexusStaging {
+      username = ossrhUsername
+      password = ossrhPassword
+  }
 }
